tkg/2.1.0/antrea-network-policies/tkg2/falco/antrea-gw.yaml
apiVersion: crd.antrea.io/v1alpha1
kind: NetworkPolicy
metadata:
  name: falcosidekick-antrea-gw
  namespace: falco
spec:
  priority: 5
  tier: securityops
  appliedTo:
    - podSelector:
        matchLabels:
          app.kubernetes.io/name: falcosidekick  
  ingress:
    - action: Allow 
      from:
      - nodeSelector: {}
      name: allowAntreaGW
